love.js v11.5 and relative dependency loading

--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -24,7 +24,7 @@
     <script src="love-game.js" type="module" defer></script>
   </head>
   <body>
-    <love-game>
+    <love-game data-memory="77594624">
       <canvas id="canvas" width="1056" height="672"></canvas>
       <noscript>
         Sorry, this game requires JavaScript.
